--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Go Pro</title>
 </head>
 <body>
     <div class="nav">
